add tmux-yank plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,7 @@ set-option -g status-position top
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 ### Tokyo Night Theme configuration
 set -g @theme_transparent_left_separator_inverse ' '
